# purefzf

./: CHANGELOG.md  README.md  pyproject.toml
bench/: 0.2.0-vs-0.1.0-run2.json  0.2.0-vs-0.1.0.json  0.3.0-sessions-run2.json  0.3.0-sessions.json  0.3.0-vs-0.1.0-run3.json  0.3.0-vs-0.2.0-oneshot.json  pypy-cpython.json  pypy-pypy.json
src/purefzf/: __init__.py  algo.py  cli.py  core.py  index.py  normalize.py  pattern.py  result.py  tokenizer.py
tests/: test_algo.py  test_cli.py  test_fastpath.py  test_filter.py  test_index.py  test_pattern.py  test_prefilter.py  test_tokenizer.py
tools/: bench.py  bench_ab.py  bench_pypy.py  bench_session.py  diff_fzf.py  gen_normalize.py
